Update composer.json to minimum stable of dev

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "homepage": "http://cristianhaunsen@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "composer/installers": "*"
     }
